manifests/cluster/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  selector:
    app: calibre
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
